--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+html {
+  height: 100%;
+  overflow-y: auto; /* Zorg dat de hele pagina kan scrollen */
+  overflow-x:hidden;
+}
