Refactor and Add StartPage Component
Removed the GamePage2 component and introduced the StartPage component with its own styling, template, and behavior. Migrated relevant logic and adjusted routes for a new entry point. Additional minor CSS and comment cleanups were made for better maintainability.

--- a/src/app/pages/game-page/game-page.component.html
+++ b/src/app/pages/game-page/game-page.component.html
@@ -1,3 +1,6 @@
-<div id="game__container">
-  <canvas #screen id="screen"></canvas>
+<div class="arcade__machine">
+  <img src="assets/Arcade-machine.png" class="arcade__machine__image">
+  <div id="game__container">
+    <canvas #screen id="screen"></canvas>
+  </div>
 </div>
