Add Explanation and Pop-Up Components
Implement the explanation page and pop-up components, incorporating navigation and styling. Added event emitters for handling visibility and navigation, ensuring seamless transitions between pages with updated routes.

--- a/src/app/pages/game-page/game-page.component.html
+++ b/src/app/pages/game-page/game-page.component.html
@@ -4,3 +4,25 @@
     <canvas #screen id="screen"></canvas>
   </div>
 </div>
+<app-pop-up
+[title]="'Use these keys to play'"
+[image]="'/assets/arrow-keys.png'"
+[altText]="'arrow-keys'"
+[visibilityEmitter]="startOverlay"
+(popupVisibilityChangedEmitter)="enableMovement()"
+>
+</app-pop-up>
+
+<app-pop-up
+  [title]="'You win!'"
+  [visibilityEmitter]="winOverlay"
+  (popupVisibilityChangedEmitter)="navigateToNewPage()"
+>
+</app-pop-up>
+
+<app-pop-up
+  [title]="'Gameover!'"
+  [visibilityEmitter]="gameoverOverlay"
+  (popupVisibilityChangedEmitter)="navigateToNewPage()"
+>
+</app-pop-up>
