--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,27 @@ html {
   overflow-y: auto; /* Zorg dat de hele pagina kan scrollen */
   overflow-x:hidden;
 }
+
+.arcade__machine {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  background-image: url("/assets/general-background.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.arcade__machine__screen {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  background-image: url("/assets/background-game.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  top: 23%;
+  width: 39%;
+  height: 57%;
+  color: #C1C1C1;
+}
