Refactor and Add New Page Components
Introduced new Gameover and YouWin pages with associated styles and functionality. Refactored existing components for better style management and added new routing paths for seamless navigation between pages.

--- a/src/app/components/chat-cloud/chat-cloud.component.html
+++ b/src/app/components/chat-cloud/chat-cloud.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="showTextCloud" class="scroll-container__chatcloud">
   <div class="chatcloud__content">
-    <img class="chatcloud__image" src="./assets/spraakwolk.png" alt="Spraakwolk">
-    <p class="chatcloud__text">{{ cloudText[sentenceIndex] }}</p>
+    <img class="chatcloud__image" [ngStyle]="{'width': cloudImageWidth}" src="./assets/spraakwolk.png" alt="Spraakwolk">
+    <p class="chatcloud__text" [ngStyle]="{'left': leftPositionText}">{{ cloudText[sentenceIndex] }}</p>
   </div>
 </div>
