--- a/src/app/pages/start-page/start-page.component.css
+++ b/src/app/pages/start-page/start-page.component.css
@@ -4,11 +4,15 @@
 }
 
 .arcade__machine__screen__header {
-  font-size: 59px;
+  font-size: 40px;
+  text-align: center;
+  margin-bottom: 10px;
 }
 
 .arcade__machine__screen__small-text {
-  font-size: 25px;
+  font-size: 20px;
+  text-align: center;
+  width: 70%;
 }
 
 
