--- a/src/app/pages/start-page/start-page.component.html
+++ b/src/app/pages/start-page/start-page.component.html
@@ -1,7 +1,7 @@
 <div class="arcade__machine">
   <img src="assets/Arcade-machine.png" class="arcade__machine__image">
-  <div class="arcade__machine__screen">
-    <h1 [style]="{ visibility: visibility ? 'visible' : 'hidden' }" class="arcade__machine__screen__header" >Press to start</h1>
+  <div class="arcade__machine__screen arcade__machine__screen--image">
+    <h1 [ngStyle]="{ visibility: visibility ? 'visible' : 'hidden' }" class="arcade__machine__screen__header" >Press to start</h1>
     <h3 class="arcade__machine__screen__small-text">To immerse yourself into the Miyamoto experience</h3>
   </div>
 </div>
