--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,12 @@
+@import url("https://use.typekit.net/vfh6ihd.css");
+
 html {
   height: 100%;
   overflow-y: auto; /* Zorg dat de hele pagina kan scrollen */
   overflow-x:hidden;
+  font-family: "cc-pixel-arcade-display", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .arcade__machine {
@@ -19,11 +24,22 @@ html {
   position: absolute;
   display: flex;
   flex-direction: column;
-  background-image: url("/assets/background-game.png");
-  background-repeat: no-repeat;
-  background-size: cover;
   top: 23%;
   width: 39%;
   height: 57%;
   color: #C1C1C1;
+}
+
+.arcade__machine__screen--image {
+  background-image: url("/assets/background-game.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.arcade__machine__screen--black {
+  background-color: #000000;
+}
+
+.arcade__machine__screen__miyamoto--mini {
+  width: 120px
 }
