Refactor components and enhance game navigation
Updated Inspiration, Gameover, and YouWin pages with improved visibility controls and animation handling. Refactored navigation to use more explicit conditions and enhanced styles for better user experience.

--- a/src/app/pages/game-page/game-page.component.html
+++ b/src/app/pages/game-page/game-page.component.html
@@ -16,13 +16,13 @@
 <app-pop-up
   [title]="'You win!'"
   [visibilityEmitter]="winOverlay"
-  (popupVisibilityChangedEmitter)="navigateToNewPage()"
+  (popupVisibilityChangedEmitter)="navigateToNewPage(true)"
 >
 </app-pop-up>
 
 <app-pop-up
   [title]="'Gameover!'"
   [visibilityEmitter]="gameoverOverlay"
-  (popupVisibilityChangedEmitter)="navigateToNewPage()"
+  (popupVisibilityChangedEmitter)="navigateToNewPage(false)"
 >
 </app-pop-up>
