Refactor pages to improve UI and add coin tracking
Enhanced the Inspiration, Gameover, and YouWin pages with new stylings and structures. Added a centralized CoinService for managing coins across different components. Improved animation and scroll interaction logic, and implemented audio triggers for better user engagement.

--- a/src/app/components/chat-cloud/chat-cloud.component.css
+++ b/src/app/components/chat-cloud/chat-cloud.component.css
@@ -1,7 +1,6 @@
 .scroll-container__chatcloud {
   position: relative;
   display: inline-block;
-  /*width: 500px;*/
 }
 
 .chatcloud__content {
@@ -20,7 +19,7 @@
   position: absolute;
   top: 25%;
   width: 40%;
-  color: black;
+  color: var(--black);
   font-size: 14px;
   text-align: center;
   pointer-events: none;
