--- a/src/app/pages/concept-page/concept-page.component.html
+++ b/src/app/pages/concept-page/concept-page.component.html
@@ -1,10 +1,12 @@
 <div class="scroll-container">
 <app-chat-cloud [cloudText]="['You made it to my concept arts. Feel free to explore!',
 'You can explore by scrolling', 'These sketches are made in the process of creating the characters!']"
-                [showTextCloud]="true"></app-chat-cloud>
-  <div class="test-rectangle"></div>
-  <div class="test-rectangle2"></div>
-  <div class="test-rectangle3"></div>
+                [showTextCloud]="true"
+                [cloudImageWidth]="'50%'"
+></app-chat-cloud>
+  <div class="concept-art__card concept-art__donkey-kong"></div>
+  <div class="concept-art__card concept-art__mario2"></div>
+  <div class="concept-art__card concept-art__mario"></div>
   <img
     class="scroll-container__miyamoto"
     src="./assets/miyamoto.svg"
