--- a/src/app/pages/gameover-page/gameover-page.component.html
+++ b/src/app/pages/gameover-page/gameover-page.component.html
@@ -1,5 +1,9 @@
 <div  class="arcade__machine">
     <img src="assets/Arcade-machine.png" class="arcade__machine__image">
+  <div class="arcade__machine__coins__row">
+    <p class="arcade__machine__coins__row__text">{{score}}</p>
+    <img class="arcade__machine__coins__row__image" src="./assets/coin.png" alt="coin image">
+  </div>
   <div *ngIf="!showEndScreen" [ngStyle]="{'justify-content' : 'center'}" class="arcade__machine__screen arcade__machine__screen--black">
     <h1 class="arcade__machine__screen__text--black">Game over</h1>
   </div>
@@ -9,7 +13,8 @@
                       [cloudImageWidth]="'40%'"
                       [leftPositionText]="'40%'"
                       [startCountdown]="false"
-                      [showTextCloud]="true"></app-chat-cloud>
+                      [showTextCloud]="true">
+      </app-chat-cloud>
       <img src="assets/miyamoto.svg" class="arcade__machine__screen__miyamoto--mini">
     </div>
 </div>
