--- a/src/app/pages/inspo-page/inspo-page.component.html
+++ b/src/app/pages/inspo-page/inspo-page.component.html
@@ -1,38 +1,59 @@
 <div class="scroll-container">
+  <div class="arcade__machine__coins__row">
+    <p class="arcade__machine__coins__row__text">Collected: {{score}} / 3</p>
+    <img class="arcade__machine__coins__row__image" src="./assets/coin.png" alt="coin image">
+  </div>  <div class="rope__line"></div>
   <div class="scroll-container__inspiration-line" [ngStyle]="{  'left': linePos}">
-    <app-inspiration-card [inspirationCardText]="'Ah yes King kong I remember.  this movie inspired me to create Donkey kong. And also inspired me to add the aspects saving a character in the game'"
-                          [inspirationCardImage]="'./assets/kingkong.png'"
-                          [inspirationCardImageAltText]="'kinkong'">
+    <div>
+      <img class="inspiration__card__clothspin" src="./assets/wasknijper.png" alt="clothspin">
+      <app-inspiration-card
+        [inspirationCardText]="'Ah yes King kong I remember.  this movie inspired me to create Donkey kong. And also inspired me to add the aspects saving a character in the game'"
+        [inspirationCardImage]="'./assets/kingkong.png'"
+        [inspirationCardImageAltText]="'kinkong'">
 
-    </app-inspiration-card>
-    <app-inspiration-card [inspirationCardText]="'Ah  popeye. Fun fact: First I wanted to make donkey kong as popeye, but we didn’t have the rights to do this. Which made me create donkey kong. So if we did have the rights there wouldn’t be a donkey kong'"
-                          [inspirationCardImage]="'./assets/popeye.png'"
-                          [inspirationCardImageAltText]="'kinkong'">
+      </app-inspiration-card>
+    </div>
+    <div class="inspiration__card__container">
+      <img class="inspiration__card__clothspin" src="./assets/wasknijper.png" alt="clothspin">
+      <app-inspiration-card
+        [inspirationCardText]="'Ah  popeye. Fun fact: First I wanted to make donkey kong as popeye, but we didn’t have the rights to do this. Which made me create donkey kong. So if we did have the rights there wouldn’t be a donkey kong'"
+        [inspirationCardImage]="'./assets/popeye.png'"
+        [inspirationCardImageAltText]="'kinkong'">
 
-    </app-inspiration-card>
-    <app-inspiration-card [inspirationCardText]="'Ahh pacman, the lovely pizza. I mean it is not a pizza haha, but you know what i mean. without the game pacman there wouldn’t be collectable items, i got the inspiration from this game.'"
-                          [inspirationCardImage]="'./assets/pacman.png'"
-                          [inspirationCardImageAltText]="'kinkong'">
-
-    </app-inspiration-card>
+      </app-inspiration-card>
+    </div>
+    <div class="inspiration__card__container">
+      <img class="inspiration__card__clothspin" src="./assets/wasknijper.png" alt="clothspin">
+      <app-inspiration-card
+        [inspirationCardText]="'Ahh pacman, the lovely pizza. I mean it is not a pizza haha, but you know what i mean. without the game pacman there wouldn’t be collectable items, i got the inspiration from this game.'"
+        [inspirationCardImage]="'./assets/pacman.png'"
+        [inspirationCardImageAltText]="'kinkong'">
+      </app-inspiration-card>
+    </div>
   </div>
-
+  <app-chat-cloud [ngStyle]="{left: chatCloudPos}" class="scroll-container__chatcloud"
+                  [cloudText]="['Hey look, here are some of my memories',
+'You can explore by scrolling!', 'These memories inspired me to create my characters!', 'Don’t forget to hover over them for some more information!']"
+                  [showTextCloud]="true"
+                  [hideOnScroll]="false"
+                  [cloudImageWidth]="'50%'"
+  ></app-chat-cloud>
   <img [ngStyle]="{ visibility: characterVisibility ? 'visible' : 'hidden' }"
-    class="scroll-container__miyamoto"
-    src="{{miyamotoImage}}"
-    alt="Miyamoto"
+       class="scroll-container__miyamoto"
+       src="{{miyamotoImage}}"
+       alt="Miyamoto"
   />
   <img [ngStyle]="{'left': pipePos}"
-    class="scroll-container__pipe"
-    src="./assets/Pixel%20pipe%202.png"
-    alt="Pipe"
+       class="scroll-container__pipe"
+       src="./assets/Pixel%20pipe%202.png"
+       alt="Pipe"
   />
 
   <div>
     <img [ngStyle]="{'right': piranaPlantPos}"
-      class="scroll-container__piranaplant"
-      src="./assets/piranaplantdicht.png"
-      alt="Miyamoto"
+         class="scroll-container__piranaplant"
+         src="./assets/piranaplantdicht.png"
+         alt="Miyamoto"
     />
     <img [ngStyle]="{'right': pipePlantPos}"
          class="scroll-container__pipeplant"
