Update inspo-page.component styling and fix typo
Refactored HTML structure to improve UI consistency by adding class to the card container. Corrected typo in inspiration card text, enhancing clarity and readability.

--- a/src/app/pages/inspo-page/inspo-page.component.html
+++ b/src/app/pages/inspo-page/inspo-page.component.html
@@ -4,13 +4,12 @@
     <img class="arcade__machine__coins__row__image" src="./assets/coin.png" alt="coin image">
   </div>  <div class="rope__line"></div>
   <div class="scroll-container__inspiration-line" [ngStyle]="{  'left': linePos}">
-    <div>
+    <div class="inspiration__card__container">
       <img class="inspiration__card__clothspin" src="./assets/wasknijper.png" alt="clothspin">
       <app-inspiration-card
-        [inspirationCardText]="'Ah yes King kong I remember.  this movie inspired me to create Donkey kong. And also inspired me to add the aspects saving a character in the game'"
+        [inspirationCardText]="'Ah yes King kong I remember. This movie inspired me to create Donkey kong. And also inspired me to add the aspects saving a character in the game'"
         [inspirationCardImage]="'./assets/kingkong.png'"
         [inspirationCardImageAltText]="'kinkong'">
-
       </app-inspiration-card>
     </div>
     <div class="inspiration__card__container">
